# noztr-core

./: .gitignore  AGENTS.md  CHANGELOG.md  CODEX-PROMPT.md  CONTRIBUTING.md  README.md  agent-brief  build.zig  build.zig.zon  handoff.md
docs/: INDEX.md  README.md  compatibility-and-support.md  errors-and-ownership.md  getting-started.md  index.md  intentional-divergences.md  performance.md  positioning.md  release-notes-template.md  scope-and-tradeoffs.md  stability-and-versioning.md
examples/: README.md  bip85_example.zig  blossom_adversarial_example.zig  build.zig  build.zig.zon  chess_pgn_adversarial_example.zig  common.zig  consumer_smoke.zig  discovery_recipe.zig  examples.zig  http_auth_adversarial_example.zig  identity_proof_recipe.zig  listings_adversarial_example.zig  nip01_adversarial_example.zig  nip01_example.zig  nip02_example.zig  nip03_adversarial_example.zig  nip03_example.zig  nip03_verification_recipe.zig  nip05_adversarial_example.zig  nip05_example.zig  nip06_example.zig  nip09_example.zig  nip10_example.zig  nip11_example.zig  nip13_example.zig  nip14_example.zig  nip17_adversarial_example.zig  nip17_example.zig  nip17_wrap_recipe.zig  nip18_example.zig  nip19_example.zig  nip21_example.zig  nip22_example.zig  nip23_example.zig  nip24_example.zig  nip25_example.zig  nip26_example.zig  nip27_example.zig  nip28_adversarial_example.zig  (+53 more)
src/: errors.zig  limits.zig  nip01_event.zig  nip01_filter.zig  nip01_message.zig  nip02_contacts.zig  nip04.zig  (+68 more)
tools/interop/rust-nostr-parity-all/: Cargo.toml
tools/interop/rust-nostr-parity-all/src/: main.rs
(+153 files in other folders)
