[package]
name = "interop-rust-nostr-parity-all"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
hex = "0.4"
nostr = { version = "0.44.2", features = ["all-nips"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
